[package]
name = "malloc_size_of"
description = "A an allocator-agnostic crate for measuring the heap size of a value"
version = "0.1.0"
authors = ["The Servo Project Developers"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/servo/malloc_size_of"
edition = "2021"

[features]
default = ["std"]
std = []
void = ["dep:void"]

[dependencies]
void = { version = "1.0.2", optional = true }
